@@ -8,6 +8,84 @@ import (
 )
 
 
+// apply the chnages to the balance folder
+func apply_to_balance(tx *btc.Tx) {
+	fmt.Println("Applying the transaction to the balance/ folder...")
+	f, _ := os.Create("balance/unspent.txt")
+	if f != nil {
+		for j:=0; j<len(unspentOuts); j++ {
+			if j>len(tx.TxIn) {
+				fmt.Fprintln(f, unspentOuts[j], unspentOutsLabel[j])
+			}
+		}
+		if *verbose {
+			fmt.Println(len(tx.TxIn), "spent output(s) removed from 'balance/unspent.txt'")
+		}
+
+		var addback int
+		for out := range tx.TxOut {
+			for j := range publ_addrs {
+				if publ_addrs[j].Owns(tx.TxOut[out].Pk_script) {
+					fmt.Fprintf(f, "%s-%03d # %.8f / %s\n", tx.Hash.String(), out,
+						float64(tx.TxOut[out].Value)/1e8, publ_addrs[j].String())
+					addback++
+				}
+			}
+		}
+		f.Close()
+
+		if addback > 0 {
+			f, _ = os.Create("balance/"+tx.Hash.String()+".tx")
+			if f != nil {
+				f.Write(tx.Serialize())
+				f.Close()
+			}
+			if *verbose {
+				fmt.Println(addback, "new output(s) appended to 'balance/unspent.txt'")
+			}
+		}
+	}
+}
+
+
+// prepare a signed transaction
+func sign_tx(tx *btc.Tx) {
+	for in := range tx.TxIn {
+		uo := UO(unspentOuts[in])
+		var found bool
+		for j := range publ_addrs {
+			if publ_addrs[j].Owns(uo.Pk_script) {
+				found = true
+				er := tx.Sign(in, uo.Pk_script, btc.SIGHASH_ALL, publ_addrs[j].Pubkey, priv_keys[j][:])
+				if er != nil {
+					fmt.Println("Error signing input", in, "of", len(tx.TxIn))
+					fmt.Println("...", er.Error())
+				}
+				break
+			}
+		}
+		if !found {
+			fmt.Println("WARNING: You do not have key for", hex.EncodeToString(uo.Pk_script))
+		}
+	}
+}
+
+func write_tx_file(tx *btc.Tx) {
+	signedrawtx := tx.Serialize()
+	tx.Hash = btc.NewSha2Hash(signedrawtx)
+
+	hs := tx.Hash.String()
+	fmt.Println(hs)
+
+	f, _ := os.Create(hs[:8]+".txt")
+	if f != nil {
+		f.Write([]byte(hex.EncodeToString(signedrawtx)))
+		f.Close()
+		fmt.Println("Transaction data stored in", hs[:8]+".txt")
+	}
+}
+
+
 // prepare a signed transaction
 func make_signed_tx() {
 	// Make an empty transaction
@@ -17,8 +95,7 @@ func make_signed_tx() {
 
 	// Select as many inputs as we need to pay the full amount (with the fee)
 	var btcsofar uint64
-	var inpcnt uint
-	for inpcnt=0; inpcnt<uint(len(unspentOuts)); inpcnt++ {
+	for inpcnt:=0; inpcnt<len(unspentOuts); inpcnt++ {
 		uo := UO(unspentOuts[inpcnt])
 		// add the input to our transaction:
 		tin := new(btc.TxIn)
@@ -33,7 +110,7 @@ func make_signed_tx() {
 	}
 	changeBtc = btcsofar - (spendBtc + feeBtc)
 	if *verbose {
-		fmt.Printf("Spending %d out of %d outputs...\n", inpcnt+1, len(unspentOuts))
+		fmt.Printf("Spending %d out of %d outputs...\n", len(tx.TxIn), len(unspentOuts))
 	}
 
 	// Build transaction outputs:
@@ -51,74 +128,34 @@ func make_signed_tx() {
 		tx.TxOut = append(tx.TxOut, &btc.TxOut{Value: changeBtc, Pk_script: chad.OutScript()})
 	}
 
-	//fmt.Println("Unsigned:", hex.EncodeToString(tx.Serialize()))
+	sign_tx(tx)
 
-	for in := range tx.TxIn {
-		uo := UO(unspentOuts[in])
-		var found bool
-		for j := range publ_addrs {
-			if publ_addrs[j].Owns(uo.Pk_script) {
-				found = true
-				er := tx.Sign(in, uo.Pk_script, btc.SIGHASH_ALL, publ_addrs[j].Pubkey, priv_keys[j][:])
-				if er != nil {
-					fmt.Println("Error signing input", in, "of", len(tx.TxIn))
-					fmt.Println("...", er.Error())
-				}
-				break
-			}
-		}
-		if !found {
-			fmt.Println("You do not have private key for input number", hex.EncodeToString(uo.Pk_script))
-		}
-	}
-
-	rawtx := tx.Serialize()
-	tx.Hash = btc.NewSha2Hash(rawtx)
-
-	hs := tx.Hash.String()
-	fmt.Println(hs)
-
-	f, _ := os.Create(hs[:8]+".txt")
-	if f != nil {
-		f.Write([]byte(hex.EncodeToString(rawtx)))
-		f.Close()
-		fmt.Println("Transaction data stored in", hs[:8]+".txt")
-	}
+	write_tx_file(tx)
 
 	if *apply2bal {
-		fmt.Println("Applying the transaction to the balance/ folder...")
-		f, _ = os.Create("balance/unspent.txt")
-		if f != nil {
-			for j:=uint(0); j<uint(len(unspentOuts)); j++ {
-				if j>inpcnt {
-					fmt.Fprintln(f, unspentOuts[j], unspentOutsLabel[j])
-				}
-			}
-			if *verbose {
-				fmt.Println(inpcnt, "spent output(s) removed from 'balance/unspent.txt'")
-			}
-
-			var addback int
-			for out := range tx.TxOut {
-				for j := range publ_addrs {
-					if publ_addrs[j].Owns(tx.TxOut[out].Pk_script) {
-						fmt.Fprintf(f, "%s-%03d # %.8f / %s\n", tx.Hash.String(), out,
-							float64(tx.TxOut[out].Value)/1e8, publ_addrs[j].String())
-						addback++
-					}
-				}
-			}
-			f.Close()
-			if addback > 0 {
-				f, _ = os.Create("balance/"+hs+".tx")
-				if f != nil {
-					f.Write(rawtx)
-					f.Close()
-				}
-				if *verbose {
-					fmt.Println(addback, "new output(s) appended to 'balance/unspent.txt'")
-				}
-			}
-		}
+		apply_to_balance(tx)
 	}
+}
+
+
+// sign raw transaction with all the keys we have
+func sing_raw_tx() {
+	dat, er := hex.DecodeString(*rawtx)
+	if er != nil {
+		fmt.Println(er.Error())
+		return
+	}
+
+	tx, txle := btc.NewTx(dat)
+	if tx == nil {
+		fmt.Println("ERROR: Cannot decode the raw transaction")
+		return
+	}
+
+	if txle != len(dat) {
+		fmt.Println("WARNING: Raw transaction length mismatch", txle, len(dat))
+	}
+
+	sign_tx(tx)
+	write_tx_file(tx)
 }
